--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "open-fprintd"]
 	path = open-fprintd
 	url = https://github.com/AbbhinavJayaraman/open-fprintd.git
+[submodule "update_fork/open-fprintd"]
+	path = update_fork/open-fprintd
+	url = https://github.com/AbbhinavJayaraman/open-fprintd.git
